# Backlog-Bandits

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  README.md  attraction_data.json  data.json  hotel_data.json  index.py  main.py  pyproject.toml  searchAirportID.py  searchFlights.py  searchHotels.py
app/: __init__.py  auth.py  config.py  jwttoken.py  main.py  schemas.py
app/db/: database.py  db_user.py  hash.py  models.py
app/lib/: jsonFetch.py  searchAirportID.py  searchHotels.py
app/router/: user.py
lib/: searchAttractions.py
